2001-07-12  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-yank-original): Unwind-protect while
	suspending font-lock.
	(message-mode): Modify for the following changes.
	(message-font-lock-keywords-2): Abolished.
	(message-font-lock-keywords-1): Abolished.
	(message-font-lock-keywords): Unified.
	(message-font-lock-cited-text-matcher): Abolished.
	(font-lock-after-change-function): Don't advise it.
	(message-font-lock-last-position): Abolished.
	(message-font-lock-citation-name-max-column): Abolished.
	(message-font-lock-cited-text-regexp) Abolished.
	(message-font-lock-fence-close-position): Abolished.
	(message-font-lock-fence-open-position): Abolished.
	(message-font-lock-fence-close-regexp): Abolished.
	(message-font-lock-fence-open-regexp): Abolished.

2001-07-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-font-lock-keywords-1): Replace regexp
	for mml tags with `mime-edit-tag-regexp'.

2001-07-10  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/message.el (message-font-lock-keywords-2): Move definitions
	for cited texts and mml tags to `message-font-lock-keywords-1'.

2001-07-09  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/dgnushack.el: Add the parent directory of the directory
	where the APEL modules are installed to `load-path' according to
	the description of the file Mule23@1934.

2001-07-09  Akihiro Arisawa  <ari@atesoft.advantest.co.jp>

	* README.semi: Modify URI of emacs-w3m.
	* README.semi.ja: Ditto.
	* Mule23@1934.en: Ditto.
	* Mule23@1934.ja: Ditto.
	* lisp/nnshimbun.el: Ditto.

	* texi/gnus-ja.texi (Top, Article Treatment): Fix typo.
	(Web Newspaper): Modify URI of emacs-w3m.

2001-07-06  KITAGAWA Takurou  <i30x1641@ip.media.kyoto-u.ac.jp>

	* lisp/Makefile.in (clever): Use `if test... then' instead of
	`test... &&'.

2001-07-06  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/Makefile.in (clever): Change the quoting style for the
	elisp form to check for XEmacs-p.
